--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'pl.allegro.tech.build.axion-release' version '1.13.2'
     id 'com.palantir.docker' version '0.26.0'
     id 'com.palantir.docker-run' version '0.26.0'
+    id 'jp.classmethod.aws.reboot.cloudformation' version '0.45'
 }
 
 version = scmVersion.version
@@ -32,7 +33,8 @@ test {
     useJUnitPlatform()
 }
 
-String imageName = "tuanhungit/spring-boot-api-example:$version";
+String dockerHubUsernameProperty = findProperty('dockerHubUsername') ?: 'tuanhungit';
+String imageName = "${dockerHubUsernameProperty}/spring-boot-api-example:$version";
 
 docker {
     name imageName
@@ -46,3 +48,15 @@ dockerRun {
     ports '8080:8080'
     clean true
 }
+
+cloudFormation {
+    stackName "$project.name-stack"
+    stackParams([
+            SubnetID: findProperty('subnetId') ?: '',
+            ServiceName: project.name,
+            ServiceVersion: project.version,
+            DockerHubUsername: dockerHubUsernameProperty
+    ])
+    templateFile project.file("ecs.yml")
+}
+
